@@ -41,6 +41,8 @@ Post-v2.11.0
        members of the same transport zone(s).
    - New QoS type "linux-netem" on Linux.
    - Added support for TLS Server Name Indication (SNI).
+   - Linux datapath:
+     * Support for the kernel versions 4.19.x and 4.20.x.
 
 
 v2.11.0 - 19 Feb 2019
